# neural-quantum-consciousness-framework

./: .dev.vars.example  .eslintignore  .eslintrc.cjs  .gitignore  ADVANCED_AGI_DEMONSTRATION.md  AGI_DESIGN_BACKUP.md  AGI_EVOLUTION_SUMMARY.md  AGI_SOURCE_BACKUP_v4.0.0.ts  CLOUDFLARE_WORKER_DEPLOYMENT.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCKER_DEPLOYMENT_SUCCESS.md  ENHANCED_AGI_README.md  IMPROVEMENT_PLAN.md  LICENSE  MULTI_LANGUAGE_AGI_ARCHITECTURE.md  PRIMARY_WORKER_DESIGN.md  README.md  REAL_AGI_DEPLOYMENT_READY.md  TRUE_AGI_STATUS.md  WEB_INTERFACE_DESIGN_SPECIFICATION.md  WEB_INTERFACE_IMPROVEMENTS.md  WRANGLER_WORKERS_STATUS.md  deployed-current.html  package.json  pnpm-lock.yaml  run-agi.sh  tsconfig.json  tsconfig.test.json  vitest.config.ts  wrangler.advanced-agi.toml  wrangler.enhanced-agi.toml  wrangler.real-agi.toml  wrangler.test.toml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: agi-pipeline.yml.disabled  ci-cd.yml  deploy.yml.disabled  main.yml  test-build.yml  test-build.yml.disabled  test-simple.yml
c-core/: AGICCoreConfig.cmake.in  CMakeLists.txt
c-core/include/: agi_core.h
c-core/src/: activation_functions.c  matrix_operations.c  memory_management.c  neural_operations.c  optimization.c  simd_operations.c
deploy/: DEPLOY_REAL_AGI.md  Dockerfile  Dockerfile.real-agi  Dockerfile.sentient.ts  Dockerfile.simple  agi-bleujs-compose.yml  agi-bleujs-nginx.conf  bleujs-agi-compose.yml  bleujs-agi-deployment.sh  bleujs-agi-nginx.conf  cloud-deployment.js  cloud-deployment.yml  deploy-agi-bleujs.sh  deploy-bleujs-agi.sh  deploy-cloud.sh  deploy-cloudflare-worker.sh  deploy-docker.sh  deploy-heroku.sh  deploy-professional-agi.sh  deploy-real-agi-cloud.sh  deploy-real-agi.sh  docker-compose.yml  fixed-agi-nginx.conf  heroku.json  manual-deploy.sh  nginx-cloud-fixed.conf  nginx-cloud.conf  nginx-domain.conf  nginx-https.conf  nginx.conf  production-setup.sh  professional-agi-compose.yml  professional-agi-deployment.sh  professional-agi-nginx.conf  real-agi-compose.yml  real-agi-nginx.conf  sentient-deployment.js  setup-ssl.sh  simple-agi-nginx.conf
docs/: AGI_IMPROVEMENTS_IMPLEMENTED.md  AGI_QUICK_START.md  AGI_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  LANGUAGE_ASSESSMENT.md  LANGUAGE_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  TENSOR_LOGIC_ENHANCEMENTS.md  TENSOR_LOGIC_ENHANCEMENTS_SUMMARY.md  TENSOR_LOGIC_IMPLEMENTATION.md  TENSOR_LOGIC_SUMMARY.md
docs/api/: README.md
docs/architecture/: MULTI_LANGUAGE_AGI_ARCHITECTURE.md  MULTI_LANGUAGE_AGI_IMPLEMENTATION_SUMMARY.md  README.md
docs/backups/: deployed-current-backup-20251011.html
docs/consciousness/: README.md
docs/deployment/: CLOUDFLARE_DOMAIN_SETUP.md  CLOUDFLARE_WORKER_DEPLOYMENT.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_DEPLOYMENT_README.md  CLOUD_DEPLOYMENT_SUMMARY.md  CONFIGURATION_SUMMARY.md  QUICK_START_WORKERS.md  WORKER_FILES_REFERENCE.md  WORKER_IMPROVEMENTS.md  WRANGLER_WORKERS_GUIDE.md
docs/development/: GITHUB_ACTIONS.md
docs/executive/: CEO_CHANGELOG_EMAIL.md
docs/learning/: README.md
rust-core/: Cargo.toml
rust-core/src/: consciousness.rs  ffi.rs  lib.rs  memory_manager.rs  neural_engine.rs  tensor_ffi.rs  tensor_ops.rs  wasm.rs
scripts/: build-multi-language.sh  fix-imports.js  run-agi.sh  test-runner.ts  train-models.py
src/: AdvancedAGI.ts  EnhancedAGI.ts  RealAGI.ts  advanced-agi-worker.ts  agi-worker-deploy.ts  agi-worker-hybrid-simple.ts  agi-worker-hybrid.ts  agi-worker-mobile-enhanced.ts  agi-worker-simple.ts  api-server.ts  enhanced-agi-worker.ts  enhanced-api-server.ts  enhanced-consciousness-engine.ts  enhanced-web-interface-worker.ts  hybrid-agi-system.ts  index.ts  multi-language-agi-worker-simple.ts  multi-language-agi-worker.ts  multi-language-agi.ts  multi-language-runtime.ts  native-bindings.ts  neuralcore-api.ts  primary-agi-worker.ts  real-agi-worker-fixed.ts  real-agi-worker-simple.ts  real-agi-worker.ts  real-consciousness-engine.ts  real-ml-integrated-worker.ts  restored-worker.ts  sentient-api.ts  sentient-web-interface.ts  simple-agi.ts  simple-worker.ts  test-advanced-agi.ts  test-real-agi.ts  test-worker.ts  ultimate-hybrid-agi-system.ts  web-interface.ts  worker.ts  worker.ts.backup
src/agents/: Agent.ts  AgentFactory.ts  CreativeAgent.ts  LearningAgent.ts  ReasoningAgent.ts
src/api/: APIServer.ts
src/config/: ConfigurationManager.ts
src/core/: AGISystem.ts  AdvancedConsciousnessEngine.ts  AdvancedCreativityEngine.ts  AdvancedNeuralArchitecture.ts  AdvancedUnderstandingEngine.ts  AutonomousGoalSystem.ts  ChainOfThoughtReasoning.ts  CommunicationProtocol.ts  ConsciousnessDisplayMetrics.ts  ConsciousnessEmergenceEngine.ts  ConsciousnessSimulator.ts  CrossDomainReasoningEngine.ts  EmergentNeuralArchitecture.ts  EnhancedNeuralNetwork.ts  ErrorHandler.ts  GenuineUnderstandingEngine.ts  KnowledgeBase.ts  LearningEngine.ts  MemoryManager.ts  MemorySystem.ts  MetaLearningFramework.ts  MultiAgentSystem.ts  NeuralCore.ts  NeuralFoundationEngine.ts  PerformanceMonitor.ts  QuantumConsciousnessEngine.ts  RealLLMIntegration.ts  RealLearningEngine.ts  RealMetricsCalculator.ts  RealNeuralNetwork.ts  RealReasoningEngine.ts  RealUnderstandingEngine.ts  ReasoningEngine.ts  SecurityManager.ts  SelfImprovementLoop.ts  SelfModificationEngine.ts  SelfModifyingAGICore.ts  SentientCore.ts  SystemCoordinator.ts  SystemMonitor.ts  (+7 more)
src/demo/: AGIDemonstration.ts  AdvancedAGIDemonstration.ts  (+2 more)
tests/: setup.ts
(+36 files in other folders)
